[gd_scene load_steps=10 format=2]

[node name="TestBattle" type="Node"]
script = ExtResource( 1 )

[node name="FadeRect" type="ColorRect" parent="."]
anchor_left = 0
anchor_right = 1
anchor_top = 0
anchor_bottom = 1
color = Color(0, 0, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade_in = SubResource( 1 )
anims/fade_out = SubResource( 2 )

[node name="BattleController" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Player" type="Node2D" parent="BattleController"]
script = ExtResource( 3 )

[node name="Enemy" type="Node2D" parent="BattleController"]
script = ExtResource( 4 )
[node name="EnemyAI" type="Node" parent="BattleController/Enemy"]
script = ExtResource( 6 )

[node name="UI" type="Control" parent="BattleController"]
script = ExtResource( 5 )
[node name="StatusEffectManager" type="Node" parent="BattleController"]
script = ExtResource( 7 )

[node name="SoundManager" type="Node" parent="BattleController"]
script = ExtResource( 8 )

[node name="HitAudio" type="AudioStreamPlayer" parent="BattleController/SoundManager"]
[node name="MissAudio" type="AudioStreamPlayer" parent="BattleController/SoundManager"]
[node name="CritAudio" type="AudioStreamPlayer" parent="BattleController/SoundManager"]

[ext_resource path="res://scenes/test_battle.gd" type="Script" id=1]
[ext_resource path="res://high_kick_hell/BattleController.gd" type="Script" id=2]
[ext_resource path="res://high_kick_hell/Player.gd" type="Script" id=3]
[ext_resource path="res://high_kick_hell/Enemy.gd" type="Script" id=4]
[ext_resource path="res://high_kick_hell/UI.gd" type="Script" id=5]
[ext_resource path="res://high_kick_hell/EnemyAI.gd" type="Script" id=6]
[ext_resource path="res://high_kick_hell/StatusEffectManager.gd" type="Script" id=7]
[ext_resource path="res://high_kick_hell/SoundManager.gd" type="Script" id=8]

[sub_resource type="Animation" id=1]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadeRect:color:a")
tracks/0/interp = 1
tracks/0/keys = {
    "times": PoolRealArray( 0, 0.5 ),
    "values": PoolRealArray( 1, 0 ),
    "transitions": PoolRealArray( 1, 1 )
}

[sub_resource type="Animation" id=2]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("FadeRect:color:a")
tracks/0/interp = 1
tracks/0/keys = {
    "times": PoolRealArray( 0, 0.5 ),
    "values": PoolRealArray( 0, 1 ),
    "transitions": PoolRealArray( 1, 1 )
}

